--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   get_it: ^7.7.0
   hive: ^2.2.3
   shared_preferences: ^2.3.2
+  go_router: ^14.2.7
 
 dev_dependencies:
   flutter_test:
