--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,5 +23,11 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^3.0.0
 
+dependency_overrides:
+  flutter_localizations:
+    sdk: flutter
+
 flutter:
   uses-material-design: true
+  assets:
+    - assets/i18n/en.json
