--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   hive: ^2.2.3
   shared_preferences: ^2.3.2
   go_router: ^14.2.7
+  font_awesome_flutter: ^10.7.0
 
 dev_dependencies:
   flutter_test:
